[project]
name = "distributed-training-guide"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "tqdm",
    "datasets",
    "transformers",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
